# cabal-rpm

./: .gitignore  .stack-all  .travis.yml  ChangeLog  ChangeLog.md  MAINTAINER-NOTES  Makefile  NEWS  README  README.md  TODO  cabal-rpm-diff  cabal-rpm.cabal  cblrpm-diff  make-dist  stack-ghc810.yaml  stack-lts11.yaml  stack-lts12.yaml  stack-lts13.yaml  stack-lts14.yaml  stack-lts16.yaml  stack-lts22.yaml  stack-lts9.yaml  stack.yaml
.github/workflows/: build.yml
man/: cabal-rpm.1.md  cblrpm.1.md
src/: CabalRpm.hs  Dependencies.hs  Depends.hs  DistributionType.hs  Distro.hs  FileUtils.hs  Header.hs  Main.hs  Options.hs  PackageUtils.hs  Setup.hs  Stackage.hs  SysCmd.hs  Types.hs
src/Commands/: Build.hs  BuildDep.hs  Depends.hs  Diff.hs  Install.hs  Refresh.hs  RpmBuild.hs  Spec.hs  Update.hs
src/Distribution/Package/: Rpm.hs
src/Distribution/Package/Rpm/: Bundled.hs  Main.hs  Setup.hs  Utils.hs
src/Distribution/Rpm/: Build.hs  Main.hs  PackageUtils.hs  Setup.hs  Spec.hs  SysCmd.hs
src/Stackage/: MajorVer.hs  Snapshots.hs
tests/: test.sh
tests/pkgs/aeson/: aeson-2.1.2.1.cabal  ghc-aeson.spec
tests/pkgs/cpphs/: cpphs.spec
tests/pkgs/podenv/: podenv.spec
tests/pkgs/pretty-simple/: ghc-pretty-simple.spec
tests/pkgs/zlib/: ghc-zlib.spec
tools/: ListPackages.hs
